# detectfire

./: .dockerignore  .env.example  .gitignore  =8.2  Dockerfile  LICENSE  README.md  requirements.txt  ruff.toml  run_inference.py
.github/workflows/: cd.yml  ci.yml
apps/api/: Cargo.toml  build.rs
apps/api/.sqlx/: query-1b4c9c8b91b8e0870403ae1ace78bd216c74c282d290b66f3f35470cb8f46c2f.json  query-2b55a2516d67d50778b688148d4af0c7b89c9d81b72b2bfa915a8cf2ec8bcbfb.json  query-2f9d02b5aadc05f2fc9b3c1b32d35282eaac311cc634fa28a44cbb336d76ddf0.json  query-2ff12ab8e16011fa63c643e7f1a2735fe34f57532a27ab3924eafa8acc504c60.json  query-3794f567267ab7ef8f7209ea2fdaa3e34382f7f09fdf89100b7fb9c28afb9b15.json  query-439d1ca2182c860deb74e1305a0d9521274b88e479e0b85dac78d153d084be6e.json  query-4d563fc2e5bb111c913c537595f46410c7e4a66b0c51719fed5230dadc22f993.json  query-55875f082177dd7d43ba3b0cb99622a81e0a70cf3fa301146a7bf8a9d3fbfb0e.json  query-5c959d3799156d80cc206bd292b6a91ed4c104bf2ba20889767200bab9b839d3.json  query-60de39422349fed5237c779bdcef304e9b00f8199a80a631f0f27c46f71d83af.json  query-62b6fa2640cbe0646d2a073152aa735ef9418d52077d7c1206823bfb59336e97.json  query-65828704a217bc4179b43755878b12bed2f423ff334e37124c3cc6229e09ef55.json  query-6f93f5f0e4f2ed56ae236a8dcc14ad9526d91149ee4092f19ef97c3cc649be35.json  query-6f9e97cd459ae789580b013640c8f21f341876f370ce640c681f8a558cdb4ef5.json  query-717590bf44ef21868bc26fcfbeea021881fa919a6df549d95551e020e6ff9f95.json  query-739a1408ac5aaeb86d3d7147c39e50987e25da9b5024897cad6819be151030f9.json  query-83840e152a5d34461f20807b6e83709105e03769b2cd27316ed4d2ce48e4417d.json  query-afd7cd6db9d3ef24466e72cfe022ab0326481ea436cd90d5f92948e7b8fbaef6.json  query-eb1e0328bb47a30c432513ef377004fc0430150692ddf82b3f45926e4da4d2b3.json
apps/api/examples/: gen_password_hash.rs
apps/api/migrations/: 0001_initial.sql  0002_detector_camera_id.sql  0003_fix_admin_password.sql  0004_add_codec_conf_other.sql  0005_add_composite_indexes.sql  0006_system_settings.sql
apps/api/src/: auth.rs  camera_sync.rs  config.rs  db.rs  detector_client.rs  error.rs  main.rs  models.rs  telegram.rs  ws.rs
apps/api/src/routes/: auth.rs  cameras.rs  events.rs  health.rs  mod.rs  settings.rs  snapshots.rs  stream.rs
apps/detector/: Cargo.toml  build.rs
apps/detector/proto/: detector.proto
apps/detector/src/: error.rs  main.rs  metrics.rs
apps/detector/src/camera/: manager.rs  mod.rs  pipeline.rs  sampler.rs  status.rs  worker.rs
apps/detector/src/config/: loader.rs  mod.rs  models.rs  validation.rs
apps/detector/src/decision/: cooldown.rs  engine.rs  mod.rs  window.rs
apps/detector/src/event/: detector_grpc.rs  mod.rs  models.rs  publisher.rs
apps/detector/src/inference/: detection.rs  engine.rs  mod.rs  postprocess.rs  preprocess.rs
apps/detector/src/proto/: .gitkeep
apps/detector/src/stream/: mod.rs  server.rs
apps/web/: README.md  index.html  mock-api.js  mock-api.mjs  package-lock.json  package.json  vite.config.ts
config/: api.yaml  app.yaml  dataset.yaml  environment.yaml  mlflow.yaml  model.yaml  monitoring.yaml  training.yaml
configs/: cameras.yaml  settings.yaml
deploy/: promtail.yml
deploy/docker/: .env.example  BUILD.md  DEBUG-DETECTOR.md  Dockerfile.api  Dockerfile.detector  Dockerfile.detector.cpu  Dockerfile.web  QUICK-START.md  README.md  build-and-run.ps1  build-api.ps1  build-commands.ps1  cameras.yaml  docker-compose.dev-infra.yml  docker-compose.monitoring.yml  docker-compose.prod-cpu.yml  docker-compose.prod-gpu.yml  docker-compose.yml  engine.rs  fix_admin_password.sql  init-db.sh  nginx.conf  run-migrations-simple.ps1  run-migrations.ps1  settings.yaml  verify-migration.sh
docs/: CHANGELOG.md  Fire_Detection_System_Design.docx  INTRODUCTION.md  PROJECT-STRUCTURE.md  STREAM-CHECKLIST.md  System_Design_Document.docx  api-spec.md  architecture.md  presentation.html  runbook.md
models/: README.md  export_and_validate.ps1  export_onnx.py  requirements.txt
scripts/: download_dfire.py  generate_doc.py  setup_runner.ps1  test-system.ps1
tests/: test_config.py  test_pipeline_stages.py
(+59 files in other folders)
